--- a/content/blog.njk
+++ b/content/blog.njk
@@ -4,7 +4,9 @@ eleventyNavigation:
   key: Archive
   order: 2
 ---
-<h1>Archive</h1>
+<article class="wrapper region flow">
+  <h1>Archive</h1>
 
-{% set postslist = collections.posts %}
-{% include "postslist.njk" %}
+  {% set postslist = collections.posts %}
+  {% include "postslist.njk" %}
+</article>
