--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,17 +6,44 @@
 
 /* Theme colors */
 :root {
-	--color-gray-20: #e0e0e0;
-	--color-gray-50: #C0C0C0;
-	--color-gray-90: #333;
-
-	--background-color: #fff;
-
-	--text-color: var(--color-gray-90);
-	--text-color-link: #082840;
-	--text-color-link-active: #5f2b48;
-	--text-color-link-visited: #17050F;
-
+	--color-dark: #404040;
+	--color-light: #f3f3f3;
+	--color-light-glare: #fff;
+	--color-primary: #0042bf;
+	--color-primary-glare: #d8e2f4;
+	--color-secondary: #ee5141;
+	--color-secondary-glare: #ffe3e5;
+	--space-xs: clamp(0.75rem, 0.69rem + 0.29vw, 0.9375rem);
+	--space-s: clamp(1rem, 0.92rem + 0.39vw, 1.25rem);
+	--space-m: clamp(1.5rem, 1.38rem + 0.58vw, 1.875rem);
+	--space-l: clamp(2rem, 1.84rem + 0.78vw, 2.5rem);
+	--space-xl: clamp(3rem, 2.77rem + 1.17vw, 3.75rem);
+	--space-2xl: clamp(4rem, 3.69rem + 1.55vw, 5rem);
+	--space-3xl: clamp(6rem, 5.53rem + 2.33vw, 7.5rem);
+	--space-xs-s: clamp(0.75rem, 0.59rem + 0.78vw, 1.25rem);
+	--space-s-m: clamp(1rem, 0.73rem + 1.36vw, 1.875rem);
+	--space-m-l: clamp(1.5rem, 1.19rem + 1.55vw, 2.5rem);
+	--space-l-xl: clamp(2rem, 1.46rem + 2.72vw, 3.75rem);
+	--space-l-2xl: clamp(2rem, 1.07rem + 4.66vw, 5rem);
+	--space-xl-2xl: clamp(3rem, 2.38rem + 3.11vw, 5rem);
+	--space-2xl-3xl: clamp(4rem, 2.91rem + 5.44vw, 7.5rem);
+	--size-step-0: clamp(1rem, 0.92rem + 0.39vw, 1.25rem);
+	--size-step-1: clamp(1.1875rem, 1.01rem + 0.87vw, 1.75rem);
+	--size-step-2: clamp(1.4375rem, 1.11rem + 1.65vw, 2.5rem);
+	--size-step-3: clamp(1.75rem, 1.19rem + 2.82vw, 3.5625rem);
+	--size-step-4: clamp(2.0625rem, 1.15rem + 4.56vw, 5rem);
+	--size-step-5: clamp(2.5rem, 1.08rem + 7.09vw, 7.0625rem);
+	--size-step-6: clamp(3rem, 0.84rem + 10.78vw, 9.9375rem);
+	--font-base: Inter, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
+	--font-serif: Georgia, sans-serif;
+	--gutter: var(--space-s-m);
+	--border-radius: var(--size-step-1);
+	--transition-base: 250ms ease;
+	--transition-movement: 200ms linear;
+	--transition-fade: 200ms ease;
+	--transition-bounce: 500ms cubic-bezier(0.5, 0.05, 0.2, 1.5);
+	--tracking: -0.05ch;
+	--tracking-s: -0.075ch;
 	--syntax-tab-size: 2;
 }
 
@@ -35,26 +62,293 @@
 	}
 }
 
-
-/* Global stylesheet */
-* {
+/* Reset (Thanks Mr. Andy Bell https://andy-bell.co.uk/a-modern-css-reset/) */
+/* Box sizing rules */
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 
-html,
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+	margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+	list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+	scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
 body {
-	padding: 0;
-	margin: 0 auto;
-	font-family: var(--font-family);
-	color: var(--text-color);
-	background-color: var(--background-color);
+	min-height: 100vh;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
 }
-html {
-	overflow-y: scroll;
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+	text-decoration-skip-ink: auto;
 }
+
+/* Make images easier to work with */
+img,
+picture {
+	max-width: 100%;
+	display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+	font: inherit;
+}
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+	html:focus-within {
+		scroll-behavior: auto;
+	}
+
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
+}
+
+/* Global stylesheet */
+
 body {
-	max-width: 40em;
+	background: var(--color-light);
+	color: var(--color-dark);
+	font-family: var(--font-base);
+	font-size: var(--size-step-1);
+	letter-spacing: var(--tracking);
+	line-height: 1.4
 }
+
+h1,
+h2,
+h3 {
+	letter-spacing: var(--tracking-s);
+	line-height: 1
+}
+
+h1 {
+	font-size: var(--size-step-5)
+}
+
+h2 {
+	font-size: var(--size-step-4)
+}
+
+h3 {
+	font-size: var(--size-step-3)
+}
+
+blockquote:not([class]),
+li,
+p {
+	max-width: 50ch
+}
+
+h1,
+h2,
+h3 {
+	max-width: 20ch
+}
+
+blockquote:not([class]) {
+	font-family: var(--font-serif);
+	font-size: var(--size-step-2)
+}
+
+blockquote:not([class]) p:last-of-type {
+	font-family: var(--font-base);
+	font-size: var(--size-step-1);
+	font-weight: 400
+}
+
+svg {
+	flex: none;
+	height: 2ex;
+	width: auto
+}
+
+[role=list] {
+	padding: 0
+}
+
+a {
+	color: currentcolor
+}
+
+a:hover {
+	text-decoration: none
+}
+
+:focus {
+	outline: 2px solid;
+	outline-offset: .3ch
+}
+
+:target {
+	scroll-margin-top: 2ex
+}
+
+main:focus {
+	outline: none
+}
+
+::selection {
+	background: var(--color-dark);
+	color: var(--color-light)
+}
+
+/* components */
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.nav {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.grid {
+	display: grid;
+	gap: var(--gutter, var(--space-s-l));
+	grid-template-columns: repeat(var(--grid-placement, auto-fill), minmax(var(--grid-min-item-size, 16rem), 1fr))
+}
+
+.grid[data-rows=masonry] {
+	align-items: start;
+	grid-template-rows: masonry
+}
+
+.grid[data-layout="50-50"] {
+	--grid-placement: auto-fit;
+	--grid-min-item-size: clamp(16rem, 50vw, 26rem)
+}
+
+.sidebar {
+	display: flex;
+	flex-wrap: wrap;
+	gap: var(--gutter, var(--space-s-l))
+}
+
+.sidebar>:first-child {
+	flex-basis: var(--sidebar-target-width, 20rem);
+	flex-grow: 1
+}
+
+.sidebar>:last-child {
+	flex-basis: 0;
+	flex-grow: 999;
+	min-width: var(--sidebar-content-min-width, 50%)
+}
+
+.sidebar[data-direction=rtl] {
+	flex-direction: row-reverse
+}
+
+/* util */
+.prose {
+	--flow-space: var(--space-l-xl);
+	--wrapper-max-width: 55rem
+}
+
+.prose :is(h2, h3, h4)+* {
+	--flow-space: var(--space-s-m)
+}
+
+.prose blockquote {
+	border-inline-start: 10px solid var(--color-secondary);
+	font-family: var(--font-serif);
+	font-size: var(--size-step-2);
+	font-style: italic;
+	padding: var(--space-m-l)
+}
+
+.prose blockquote>*+* {
+	margin-top: var(--space-m-l)
+}
+
+.prose blockquote :last-child {
+	font-family: var(--font-base);
+	font-size: var(--size-step-1);
+	font-style: normal
+}
+
+.flow>*+* {
+	margin-top: var(--flow-space, 1em)
+}
+
+.region {
+	padding-bottom: var(--region-space, var(--space-l-2xl));
+	padding-top: var(--region-space, var(--space-l-2xl))
+}
+
+.wrapper {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: var(--wrapper-max-width, 85rem);
+	padding-left: var(--gutter);
+	padding-right: var(--gutter);
+	position: relative
+}
+
+.mt-l-xl {
+	margin-top: clamp(2rem, 1.46rem + 2.72vw, 3.75rem)
+}
+
+.block {
+	display: block
+}
+
+.inline {
+	display: inline
+}
+
+.grid {
+	display: grid
+}
+
+.flow-space-s-m {
+	--flow-space: clamp(1rem, 0.73rem + 1.36vw, 1.875rem)
+}
+
+.flow-space-2xl-3xl {
+	--flow-space: clamp(4rem, 2.91rem + 5.44vw, 7.5rem)
+}
+
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
 .visually-hidden {
@@ -65,206 +359,4 @@ body {
 	position: absolute;
 	white-space: nowrap;
 	width: 1px;
-}
-
-p:last-child {
-	margin-bottom: 0;
-}
-p {
-	line-height: 1.5;
-}
-
-li {
-	line-height: 1.5;
-}
-
-a[href] {
-	color: var(--text-color-link);
-}
-a[href]:visited {
-	color: var(--text-color-link-visited);
-}
-a[href]:hover,
-a[href]:active {
-	color: var(--text-color-link-active);
-}
-
-main {
-	padding: 1rem;
-}
-main :first-child {
-	margin-top: 0;
-}
-
-header {
-	border-bottom: 1px dashed var(--color-gray-20);
-}
-header:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-.links-nextprev {
-	list-style: none;
-	border-top: 1px dashed var(--color-gray-20);
-	padding: 1em 0;
-}
-
-table {
-	margin: 1em 0;
-}
-table td,
-table th {
-	padding-right: 1em;
-}
-
-pre,
-code {
-	font-family: var(--font-family-monospace);
-}
-pre:not([class*="language-"]) {
-	margin: .5em 0;
-	line-height: 1.375; /* 22px /16 */
-	-moz-tab-size: var(--syntax-tab-size);
-	-o-tab-size: var(--syntax-tab-size);
-	tab-size: var(--syntax-tab-size);
-	-webkit-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
-	direction: ltr;
-	text-align: left;
-	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
-}
-code {
-	word-break: break-all;
-}
-
-/* Header */
-header {
-	display: flex;
-	gap: 1em .5em;
-	flex-wrap: wrap;
-	align-items: center;
-	padding: 1em;
-}
-.home-link {
-	font-size: 1em; /* 16px /16 */
-	font-weight: 700;
-	margin-right: 2em;
-}
-.home-link:link:not(:hover) {
-	text-decoration: none;
-}
-
-/* Nav */
-.nav {
-	display: flex;
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-.nav-item {
-	display: inline-block;
-	margin-right: 1em;
-}
-.nav-item a[href]:not(:hover) {
-	text-decoration: none;
-}
-.nav a[href][aria-current="page"] {
-	text-decoration: underline;
-}
-
-/* Posts list */
-.postlist {
-	list-style: none;
-	padding: 0;
-	padding-left: 1.5rem;
-}
-.postlist-item {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: baseline;
-	counter-increment: start-from -1;
-	margin-bottom: 1em;
-}
-.postlist-item:before {
-	display: inline-block;
-	pointer-events: none;
-	content: "" counter(start-from, decimal-leading-zero) ". ";
-	line-height: 100%;
-	text-align: right;
-	margin-left: -1.5rem;
-}
-.postlist-date,
-.postlist-item:before {
-	font-size: 0.8125em; /* 13px /16 */
-	color: var(--color-gray-90);
-}
-.postlist-date {
-	word-spacing: -0.5px;
-}
-.postlist-link {
-	font-size: 1.1875em; /* 19px /16 */
-	font-weight: 700;
-	flex-basis: calc(100% - 1.5rem);
-	padding-left: .25em;
-	padding-right: .5em;
-	text-underline-position: from-font;
-	text-underline-offset: 0;
-	text-decoration-thickness: 1px;
-}
-.postlist-item-active .postlist-link {
-	font-weight: bold;
-}
-
-/* Tags */
-.post-tag {
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	text-transform: capitalize;
-	font-style: italic;
-}
-.postlist-item > .post-tag {
-	align-self: center;
-}
-
-/* Tags list */
-.post-metadata {
-	display: inline-flex;
-	flex-wrap: wrap;
-	gap: .5em;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-.post-metadata time {
-	margin-right: 1em;
-}
-
-/* Direct Links / Markdown Headers */
-.header-anchor {
-	text-decoration: none;
-	font-style: normal;
-	font-size: 1em;
-	margin-left: .1em;
-}
-a[href].header-anchor,
-a[href].header-anchor:visited {
-	color: transparent;
-}
-a[href].header-anchor:focus,
-a[href].header-anchor:hover {
-	text-decoration: underline;
-}
-a[href].header-anchor:focus,
-:hover > a[href].header-anchor {
-	color: #aaa;
-}
-
-h2 + .header-anchor {
-	font-size: 1.5em;
 }
