--- a/content/tags.njk
+++ b/content/tags.njk
@@ -14,9 +14,10 @@ eleventyComputed:
   title: Tagged “{{ tag }}”
 permalink: /tags/{{ tag | slugify }}/
 ---
-<h1>Tagged “{{ tag }}”</h1>
 
-{% set postslist = collections[ tag ] %}
-{% include "postslist.njk" %}
+<article class="region wrapper flow">
+  <h1>Tagged “{{ tag }}”</h1>
 
-<p>See <a href="/tags/">all tags</a>.</p>
+  {% set postslist = collections[tag] %}
+  {% include "postslist.njk" %}
+</article>
