--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,8 +1,14 @@
-<ul role="list" reversed class="postlist">
-{% for post in postslist | reverse %}
-	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-		<a href="{{ post.url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLLL yyyy") }}</time>
-	</li>
-{% endfor %}
+<ul role="list" reversed class="flow" style="">
+	{% for post in postslist | reverse %}
+		<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
+			<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLLL yyyy") }}</time>
+
+			<a href="{{ post.url }}" class="postlist-link">
+				{% if post.data.title %}{{ post.data.title }}
+				{% else %}
+					<code>{{ post.url }}</code>
+				{% endif %}
+			</a>
+		</li>
+	{% endfor %}
 </ul>
