--- a/content/about.njk
+++ b/content/about.njk
@@ -5,7 +5,7 @@ eleventyNavigation:
   order: 4
 ---
 
-<article class="region wrapper flow">
+<article class="region wrapper flow prose">
     <h1>About Me</h1>
     <p>Lorem Ipsum</p>
 </article>
