update with hello world post

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{{ title or metadata.title }}</title>
+		<title>{{ title or metadata.title }} | Alex Blackwell</title>
 		<meta name="description" content="{{ description or metadata.description }}">
 
 		{#- Atom and JSON feeds included by default #}
@@ -32,19 +32,7 @@
 	</head>
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
-
-		<header class="wrapper">
-			<a href="/" class="home-link">{{ metadata.title }}</a>
-
-			<nav>
-				<h2 class="visually-hidden">Top level navigation menu</h2>
-				<ul role="list" class="cluster">
-				{%- for entry in collections.all | eleventyNavigation %}
-					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
-				{%- endfor %}
-				</ul>
-			</nav>
-		</header>
+		{% include "site-head.njk" %}
 
 		<main id="skip">
 			{{ content | safe }}
