--- a/content/about.njk
+++ b/content/about.njk
@@ -6,6 +6,10 @@ eleventyNavigation:
 ---
 
 <article class="region wrapper flow prose">
-    <h1>About Me</h1>
-    <p>Lorem Ipsum</p>
+    <h1>About me</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam quaerat quos et perferendis ratione blanditiis quibusdam assumenda quo, necessitatibus aperiam doloribus error? Quo iusto pariatur, facere modi atque cupiditate nostrum.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam quaerat quos et perferendis ratione blanditiis quibusdam assumenda quo, necessitatibus aperiam doloribus error? Quo iusto pariatur, facere modi atque cupiditate nostrum.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam quaerat quos et perferendis ratione blanditiis quibusdam assumenda quo, necessitatibus aperiam doloribus error? Quo iusto pariatur, facere modi atque cupiditate nostrum.</p>
 </article>
