--- a/content/blog.njk
+++ b/content/blog.njk
@@ -4,7 +4,7 @@ eleventyNavigation:
   key: Archive
   order: 2
 ---
-<article class="wrapper region flow">
+<article class="wrapper region flow prose">
   <h1>Archive</h1>
 
   {% set postslist = collections.posts %}
