--- a/content/tags-list.njk
+++ b/content/tags-list.njk
@@ -3,7 +3,7 @@ permalink: /tags/
 layout: layouts/home.njk
 ---
 
-<article class="region wrapper flow">
+<article class="region wrapper flow prose">
 	<h1>Tags</h1>
 
 	<ul>
