--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,7 +1,6 @@
-<ul role="list" reversed class="flow" style="">
+<ul reversed class="flow" style="--flow-space: var(--space-s)">
 	{% for post in postslist | reverse %}
 		<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-			<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLLL yyyy") }}</time>
 
 			<a href="{{ post.url }}" class="postlist-link">
 				{% if post.data.title %}{{ post.data.title }}
