remove underline over logo and unactive nav links

--- a/_includes/site-head.njk
+++ b/_includes/site-head.njk
@@ -1,5 +1,5 @@
 <header role="banner" class="wrapper">
-    <a href="/" class="home-link">{{ metadata.title }}</a>
+    <a href="/" class="home-link logo">{{ metadata.title }}</a>
 
     <nav>
         <h2 class="visually-hidden">Top level navigation menu</h2>
